Only the li element should have the tab-server id

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             <div class="menu-list">
                 <ul id="menu-content" class="menu-content collapse out" role="tablist">
                     <li role="presentation" class="active" id="tab-server">
-                      <a href="#ircData" aria-controls="ircData" role="tab" data-toggle="tab" id="tab-server">
+                      <a href="#ircData" aria-controls="ircData" role="tab" data-toggle="tab">
                       <i class="fa fa-server fa-lg"></i> Server
                       </a>
                     </li>
